# csv_fast_reader

./: .bazelrc  .clang-format  .clang-tidy  .envrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md
.github/workflows/: ci.yml
apps/csv_fast/: BUILD  csv.c  csv.h
benchmarks/: BUILD  csv_benchmark.c  csv_parser_benchmark.cc
data/: BUILD
tests/: BUILD  test_csv.c
tests/fixtures/csv_spectrum/: README.md
tools/: BUILD  c_copts.bzl  dwyu.bzl  preset.bazelrc  tools.lock.json  unity_test.bzl
tools/format/: BUILD
tools/install/: BUILD.bazel  def.bzl  installer.bash.template
tools/scripts/: workspace_status.sh
